--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <!-- include your js files below -->
   <script src="./spec/main-spec.js"></script>
   <script src="./spec/test-array-ext.js"></script>
+  <script src="./spec/test-string-ext.js"></script>
   <script src="./array_extensions.js"></script>
+  <script src="./string_extensions.js"></script>
   <!-- <script src="path/to/your/script/here"></script> -->
 </head>
 <body>
